<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_recipe_steps"
    >


    <TextView
        android:id="@+id/textView_steps_title"
        style="@style/ingredientRecipeTitle"
        android:text="@string/steps_title"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>