<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <include layout="@layout/toolbar_main" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_select_recipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:id="@+id/blank_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="gone"
        android:padding="@dimen/blank_view_padding"
        app:srcCompat="@drawable/ic_cloud_off_white_24dp"/>


</LinearLayout>